k8s/ingress/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    ingressClassName: nginx
spec:
  rules:
    - host: lets-eat.store
      http:
        paths:
          - path: /monitor
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
